--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>Baboon</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
@@ -8,7 +9,7 @@
     <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Active</a>
+          <a class="nav-link" href="#">Housmades</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
@@ -21,6 +22,12 @@
         </li>
       </ul>
     </nav>
+
+    <div class="jumbotron">
+      <h1>Wellcome to Baboon project!</h1>
+      <p>Here we will implement our suprime houseHold application.</p>
+    </div>
+
     <script src="https://code.jquery.com/jquery-4.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
