Adding some more updates for Baboon change to Beyond code Issue #157

--- a/beyond/templates/home.html
+++ b/beyond/templates/home.html
@@ -2,7 +2,7 @@
 {% block content %}
 <main>
     <div class="jumbotron">
-        <h1>Wellcome to Baboon project!</h1>
+        <h1>Wellcome to Beyond project!</h1>
         <p>Here we will implement our suprime houseHold application.</p>
     </div>
 </main>
