Add content to html Home page and the main page links #161

--- a/beyond/templates/home.html
+++ b/beyond/templates/home.html
@@ -3,7 +3,11 @@
 <main>
     <div class="jumbotron">
         <h1>Wellcome to Beyond project!</h1>
-        <p>Here we will implement our suprime houseHold application.</p>
+        <p>Red Hat is interested in spreading the open-source culture among additional communities. The academy is interested in exposing its students to current industry tech stack and work practices. Red Hat engineers are seeking to share their knowledge with future engineers.</p>
+	<p><strong>Beyond</strong> is a platform to achieve all of the above. The initiative was founded and led by Irit Goihman and Liora Milbaum.</p>
+	<p2><strong>Beyond</strong> provides courses, workshops and lectures which are delivered by Red Hat engineers. Throughout this year, Beyond delivered two academic courses: DevOps for beginners and Open Source Pillars. </p2>
+	<p>Students are exposed to the Open Source culture, ecosystem, and tech stack through lectures, mentoring, and practical assignments. On top of it, they gain practical and technical skillset to get by their first steps in their tech career.</p>
+
     </div>
 </main>
 {% endblock content %}
