--- a/beyond/templates/layout.html
+++ b/beyond/templates/layout.html
@@ -11,16 +11,10 @@
     <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Home</a>
+                <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Activities</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Resources</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link disabled" href="#">Contacts</a>
+                <a class="nav-link" href="contacts">Contacts</a>
             </li>
         </ul>
     </nav>
