Add new redhat logo to the header navbar

--- a/beyond/templates/layout.html
+++ b/beyond/templates/layout.html
@@ -10,6 +10,10 @@
 <header>
     <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
         <ul class="navbar-nav">
+            <a href="#" class="navbar-brand">
+                <!-- Logo Image -->
+                <img src="../static/Logo-Red_Hat-Beyond-A-Standard-RGB.png" alt="" width="170" height="30">
+            </a>
             <li class="nav-item active">
                 <a class="nav-link" href="/">Home</a>
             </li>
