--- a/beyond/templates/layout.html
+++ b/beyond/templates/layout.html
@@ -18,6 +18,9 @@
             <li class="nav-item active">
                 <a class="nav-link" href="/">Home</a>
             </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="cycles">Cycles</a>
+            </li>
             <li class="nav-item">
                 <a class="nav-link" href="contacts">Contacts</a>
             </li>
